--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -8,8 +8,8 @@ page.login.head=Log in
 page.logout.head=See you at the library!
 page.main=Main page
 page.main.welcome=Welcom to library,
-placeholder.login=Your login
-placeholder.password=Your password
+placeholder.login=Login
+placeholder.password=Password
 sign.in=Sign in
 logout=Logout
 page.change.personal.data=Change your personal data
@@ -54,4 +54,5 @@ button.unblock=Unblock
 error.orders.empty=Users have no orders yet
 error.user.orders.empty=You have no orders yet
 error.user.temp.orders.empty=Your shopping cart is empty
+error.blocked.users.empty=There are no blocked users - everyone return books on time
 
