--- a/web/src/main/resources/i18n/messages_en.properties
+++ b/web/src/main/resources/i18n/messages_en.properties
@@ -55,4 +55,9 @@ error.orders.empty=Users have no orders yet
 error.user.orders.empty=You have no orders yet
 error.user.temp.orders.empty=Your shopping cart is empty
 error.blocked.users.empty=There are no blocked users - everyone return books on time
+error.you.already.have.book=This book is already in your order
+error.you.already.have.three.books=You cannot take more than three books
+error.no.book.in.library=The book is not currently in the library
+error.all.books.are.occupied=All books are booked
+
 
